# ClientAPI

./: .gitignore  .pre-commit-config.yaml  README.md  generate_data.py  pyproject.toml
api/: database.py  exceptions.py  logic.py  main.py  models.py
diagrams/: project_diagram.puml  summary_sequence.puml  upload_sequence.puml
tests/: api_test.py  dummy_transactions.csv  dummy_transactions_mid.csv  summary_test.py  testsnippet.py  upload_test.py
