[project]
name = "api"
version = "0.1.0"
description = "API Endpoint that processes a large CSV dataset and returns summary statistics."
authors = [
    {name = "MirjalilovS",email = "MirjalilovS@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "faker",
    "Pydantic"
]

[dependency-groups]
dev = [
    "pytest",
    "black",
    "pre-commit"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
